@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.4072 2005/10/20 11:48:13 xtraeme Exp $
+$NetBSD: TODO,v 1.4073 2005/10/20 15:32:59 tonio Exp $
 
 Suggested new packages
 ======================
@@ -828,7 +828,6 @@ Suggested package updates
 	o p5-Apache-Session-1.80
 	o p5-Apache-Session-Wrapper-0.26
 	o p5-Apache-Test-1.26
-	o p5-Archive-Zip-1.16
 	o p5-Array-Compare-1.13
 	o p5-Audio-Wav-0.04
 	o p5-Authen-SASL-2.09
