@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11585 2005/10/20 15:32:59 tonio Exp $
+$NetBSD: CHANGES,v 1.11586 2005/10/20 16:25:46 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4743,3 +4743,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated finance/gnucash to 1.8.12 [wiz 2005-10-20]
 	Updated www/snownews to 1.5.7 [tonio 2005-10-20]
 	Updated www/curl to 7.15.0nb1 [minskim 2005-10-20]
+	Updated archivers/p5-Archive-Zip to 1.16 [abs 2005-10-20]
